--- a/src/styles/Switch.scss
+++ b/src/styles/Switch.scss
@@ -65,3 +65,9 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+@media (pointer: coarse) {
+  .slider:hover {
+    background-color: $dark-grey;
+  }
+}
